--- a/android/build.gradle
+++ b/android/build.gradle
@@ -39,6 +39,6 @@ repositories {
 }
 
 dependencies {
-    compile 'com.facebook.react:react-native:+'
-    compile project(':libbambuser')
+    implementation 'com.facebook.react:react-native:+'
+    implementation project(':libbambuser')
 }
